Simplify meta model to binary

--- a/train_binary.ipynb
+++ b/train_binary.ipynb
@@ -2,7 +2,20 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
+      "metadata": {
+        "id": "C2QvckCBVGHS"
+      },
+      "outputs": [],
+      "source": [
+        "from huggingface_hub import notebook_login\n",
+        "\n",
+        "notebook_login()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -57,93 +70,80 @@
         "id": "cnaxCaLx2yxw",
         "outputId": "b5b118da-606a-429b-e6e6-09c7364a98ee"
       },
-      "outputs": [
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "6f1fdeb46b894d65970f0a6e1721341c",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "model.safetensors:   0%|          | 0.00/673M [00:00<?, ?B/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "c06bd18096584a19aada5b7ff147263e",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "tokenizer.json:   0%|          | 0.00/2.76M [00:00<?, ?B/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "Special tokens have been added in the vocabulary, make sure the associated word embeddings are fine-tuned or trained.\n"
-          ]
-        },
-        {
-          "data": {
-            "text/plain": [
-              "[[{'label': 'Unrelated', 'score': 0.6102932095527649},\n",
-              "  {'label': 'PAF', 'score': 0.3649645447731018},\n",
-              "  {'label': 'AA', 'score': 0.18087495863437653}],\n",
-              " [{'label': 'Unrelated', 'score': 0.5067651867866516},\n",
-              "  {'label': 'PAF', 'score': 0.4857565760612488},\n",
-              "  {'label': 'AA', 'score': 0.15992073714733124}],\n",
-              " [{'label': 'PAF', 'score': 0.5792027711868286},\n",
-              "  {'label': 'Unrelated', 'score': 0.3967333734035492},\n",
-              "  {'label': 'AA', 'score': 0.1498090624809265}],\n",
-              " [{'label': 'PAF', 'score': 0.5488597750663757},\n",
-              "  {'label': 'Unrelated', 'score': 0.47138530015945435},\n",
-              "  {'label': 'AA', 'score': 0.09293634444475174}],\n",
-              " [{'label': 'Unrelated', 'score': 0.6120955348014832},\n",
-              "  {'label': 'PAF', 'score': 0.3878132700920105},\n",
-              "  {'label': 'AA', 'score': 0.10666265338659286}],\n",
-              " [{'label': 'Unrelated', 'score': 0.505553126335144},\n",
-              "  {'label': 'PAF', 'score': 0.5012772679328918},\n",
-              "  {'label': 'AA', 'score': 0.11429976671934128}]]"
-            ]
-          },
-          "execution_count": 1,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
-        "from transformers import pipeline\n",
+        "from datasets import load_dataset\n",
+        "from transformers import (\n",
+        "    AutoTokenizer,\n",
+        "    DataCollatorWithPadding,\n",
+        "    AutoModelForSequenceClassification,\n",
+        "    TrainingArguments,\n",
+        "    Trainer\n",
+        ")\n",
+        "import evaluate\n",
+        "import numpy as np\n",
         "\n",
-        "card = \"alex-miller/cdp-paf-meta-classifier\"\n",
-        "classifier = pipeline(\"text-classification\", model=card, top_k=None,\n",
-        "    # device=0\n",
+        "\n",
+        "dataset = load_dataset(\"alex-miller/cdp-paf-meta\", split=\"train\")\n",
+        "\n",
+        "dataset = dataset.class_encode_column('label').train_test_split(\n",
+        "    test_size=0.2,\n",
+        "    stratify_by_column=\"label\",\n",
+        "    shuffle=True,\n",
+        "    seed=42\n",
+        ")\n",
+        "unique_labels = [\"Unrelated\", \"PAF/AA\"]\n",
+        "id2label = {i: label for i, label in enumerate(unique_labels)}\n",
+        "label2id = {id2label[i]: i for i in id2label.keys()}\n",
+        "\n",
+        "card = \"alex-miller/ODABert\"\n",
+        "tokenizer = AutoTokenizer.from_pretrained(card, model_max_length=512)\n",
+        "data_collator = DataCollatorWithPadding(tokenizer=tokenizer)\n",
+        "\n",
+        "def preprocess_function(examples):\n",
+        "    return tokenizer(examples['text'], truncation=True)\n",
+        "\n",
+        "\n",
+        "accuracy = evaluate.load('accuracy')\n",
+        "def compute_metrics(eval_pred):\n",
+        "    predictions, labels = eval_pred\n",
+        "    predictions = np.argmax(predictions, axis=1)\n",
+        "    return accuracy.compute(predictions=predictions, references=labels)\n",
+        "\n",
+        "\n",
+        "tokenized_data = dataset.map(preprocess_function, batched=True, num_proc=2)\n",
+        "model = AutoModelForSequenceClassification.from_pretrained(\n",
+        "    card, num_labels=len(id2label.keys()), id2label=id2label, label2id=label2id\n",
         ")\n",
         "\n",
-        "texts = [\n",
-        "    # PAF/AA\n",
-        "    \"Ensure protection of livelihoods and acceptable food consumption of vulnerable populations at risk of extreme food insecurity due to drought. VIII.1. Emergency Response Material relief assistance and services ODA Grants ENSURE PROTECTION OF LIVELIHOODS AND ACCEPTABLE FOOD CONSUMPTION OF VULNERABLE POPULATIONS AT RISK OF EXTREME FOOD INSECURITY DUE TO DROUGHT. Central Emergency Response Fund Rapid Response Ethiopia Food and Agricultural Organisation\",\n",
-        "    # PAF/AA\n",
-        "    \"VIII.3. Disaster Prevention & Preparedness Multi-hazard response preparedness Other Official Flows (non Export Credit) COSTA RICA CATASTROPHE DEFERRED DRAW DOWN OPTION (CAT DDO) International Bank for Reconstruction and Development IBRD Costa Rica Recipient Government\",\n",
-        "    # PAF/AA\n",
-        "    \"Ending Drought Emergencies: Support to Pillar 5 (EDE/DRMC-SP5) VIII.3. Disaster Prevention & Preparedness Multi-hazard response preparedness ODA Grants ENDING DROUGHT EMERGENCIES: SUPPORT TO PILLAR 5 (EDE/DRMC-SP5) This grant will support one of the sixth pillars of the EDE CPF, namely the Drought Risk Management (Pillar 5), which is under the responsibility of the National Drought Management Authority (NDMA). Under the fifth pillar, the programme will support the component on early warning and early response to specifically strengthen the timeliness, accountability and efficiency of drought response, including through better preparedness. EU Institutions European Development Fund Kenya Recipient Government Recipient Government\",\n",
-        "    # Unrelated\n",
-        "    \"Upgrading water supply facilities for communities in Lebanon affected by the consequences of the conflict in Syria I.4. Water Supply & Sanitation Basic drinking water supply and basic sanitation ODA Grants UPGRADING WATER SUPPLY FACILITIES FOR COMMUNITIES IN LEBANON AFFECTED BY THE CONSEQUENCES OF THE CONFLICT IN SYRIA In line with the Lebanon chapter of the Syria Regional Response Plan 2013, the project's objective is the following: To ensure that affected populations have access to adequate quantity of safe water and have means to store water safely. EU Institutions European Commission Lebanon United Nations Office of the United Nations High Commissioner for Refugees United Nations Office of the United Nations High Commissioner for Refugees\",\n",
-        "    # Unrelated\n",
-        "    \"Providing Free Bread, Supporting Livelihood and Preserving Livestock VIII.1. Emergency Response Emergency food assistance ODA Grants PROVIDING FREE BREAD, SUPPORTING LIVELIHOOD AND PRESERVING LIVESTOCK Providing free bread to Syrian families in the sieged regions and in northern Syria Saudi Arabia King Salman Humanitarian Aid and Relief Center Syrian Arab Republic International NGO  Human Rights and Freedoms and Humanitarian Relief\",\n",
-        "    # Unrelated\n",
-        "    \"Emergency food assistance VIII.1. Emergency Response Emergency food assistance ODA Grants EMERGENCY FOOD ASSISTANCE Projects Türkiye Miscellaneous Syrian Arab Republic Local Government Local Government\"\n",
-        "]\n",
-        "classifier(texts)"
+        "training_args = TrainingArguments(\n",
+        "    'cdp-paf-meta-classifier',\n",
+        "    learning_rate=1e-6, # This can be tweaked depending on how loss progresses\n",
+        "    per_device_train_batch_size=16, # These should be tweaked to match GPU VRAM\n",
+        "    per_device_eval_batch_size=16,\n",
+        "    num_train_epochs=10,\n",
+        "    weight_decay=0.01,\n",
+        "    evaluation_strategy='epoch',\n",
+        "    save_strategy='epoch',\n",
+        "    logging_strategy='epoch',\n",
+        "    load_best_model_at_end=True,\n",
+        "    push_to_hub=True,\n",
+        "    save_total_limit=5,\n",
+        ")\n",
+        "\n",
+        "trainer = Trainer(\n",
+        "    model=model,\n",
+        "    args=training_args,\n",
+        "    train_dataset=tokenized_data['train'],\n",
+        "    eval_dataset=tokenized_data['test'],\n",
+        "    tokenizer=tokenizer,\n",
+        "    data_collator=data_collator,\n",
+        "    compute_metrics=compute_metrics,\n",
+        ")\n",
+        "\n",
+        "trainer.train()\n",
+        "trainer.evaluate()\n",
+        "trainer.push_to_hub()"
       ]
     }
   ],
@@ -158,15 +158,7 @@
       "name": "python3"
     },
     "language_info": {
-      "codemirror_mode": {
-        "name": "ipython",
-        "version": 3
-      },
-      "file_extension": ".py",
-      "mimetype": "text/x-python",
       "name": "python",
-      "nbconvert_exporter": "python",
-      "pygments_lexer": "ipython3",
       "version": "3.8.10"
     },
     "widgets": {
