Reorder unique labels, fix min/max typo, remove excess variables

--- a/inference.ipynb
+++ b/inference.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -61,12 +61,12 @@
         {
           "data": {
             "application/vnd.jupyter.widget-view+json": {
-              "model_id": "6f1fdeb46b894d65970f0a6e1721341c",
+              "model_id": "39495f73423f4d388c367e37dd85743e",
               "version_major": 2,
               "version_minor": 0
             },
             "text/plain": [
-              "model.safetensors:   0%|          | 0.00/673M [00:00<?, ?B/s]"
+              "config.json:   0%|          | 0.00/1.00k [00:00<?, ?B/s]"
             ]
           },
           "metadata": {},
@@ -75,12 +75,12 @@
         {
           "data": {
             "application/vnd.jupyter.widget-view+json": {
-              "model_id": "c06bd18096584a19aada5b7ff147263e",
+              "model_id": "7897ebc110254f02a5b2d2b019355eed",
               "version_major": 2,
               "version_minor": 0
             },
             "text/plain": [
-              "tokenizer.json:   0%|          | 0.00/2.76M [00:00<?, ?B/s]"
+              "model.safetensors:   0%|          | 0.00/673M [00:00<?, ?B/s]"
             ]
           },
           "metadata": {},
@@ -96,27 +96,16 @@
         {
           "data": {
             "text/plain": [
-              "[[{'label': 'Unrelated', 'score': 0.6102932095527649},\n",
-              "  {'label': 'PAF', 'score': 0.3649645447731018},\n",
-              "  {'label': 'AA', 'score': 0.18087495863437653}],\n",
-              " [{'label': 'Unrelated', 'score': 0.5067651867866516},\n",
-              "  {'label': 'PAF', 'score': 0.4857565760612488},\n",
-              "  {'label': 'AA', 'score': 0.15992073714733124}],\n",
-              " [{'label': 'PAF', 'score': 0.5792027711868286},\n",
-              "  {'label': 'Unrelated', 'score': 0.3967333734035492},\n",
-              "  {'label': 'AA', 'score': 0.1498090624809265}],\n",
-              " [{'label': 'PAF', 'score': 0.5488597750663757},\n",
-              "  {'label': 'Unrelated', 'score': 0.47138530015945435},\n",
-              "  {'label': 'AA', 'score': 0.09293634444475174}],\n",
-              " [{'label': 'Unrelated', 'score': 0.6120955348014832},\n",
-              "  {'label': 'PAF', 'score': 0.3878132700920105},\n",
-              "  {'label': 'AA', 'score': 0.10666265338659286}],\n",
-              " [{'label': 'Unrelated', 'score': 0.505553126335144},\n",
-              "  {'label': 'PAF', 'score': 0.5012772679328918},\n",
-              "  {'label': 'AA', 'score': 0.11429976671934128}]]"
+              "[{'label': 'PAF/AA', 'score': 0.9195141196250916},\n",
+              " {'label': 'PAF/AA', 'score': 0.8137043118476868},\n",
+              " {'label': 'PAF/AA', 'score': 0.8987476825714111},\n",
+              " {'label': 'PAF/AA', 'score': 0.9216814637184143},\n",
+              " {'label': 'Unrelated', 'score': 0.8043110370635986},\n",
+              " {'label': 'Unrelated', 'score': 0.9155363440513611},\n",
+              " {'label': 'Unrelated', 'score': 0.978498637676239}]"
             ]
           },
-          "execution_count": 1,
+          "execution_count": 6,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -125,23 +114,25 @@
         "from transformers import pipeline\n",
         "\n",
         "card = \"alex-miller/cdp-paf-meta-classifier\"\n",
-        "classifier = pipeline(\"text-classification\", model=card, top_k=None,\n",
+        "classifier = pipeline(\"text-classification\", model=card,\n",
         "    # device=0\n",
         ")\n",
         "\n",
         "texts = [\n",
         "    # PAF/AA\n",
-        "    \"Ensure protection of livelihoods and acceptable food consumption of vulnerable populations at risk of extreme food insecurity due to drought. VIII.1. Emergency Response Material relief assistance and services ODA Grants ENSURE PROTECTION OF LIVELIHOODS AND ACCEPTABLE FOOD CONSUMPTION OF VULNERABLE POPULATIONS AT RISK OF EXTREME FOOD INSECURITY DUE TO DROUGHT. Central Emergency Response Fund Rapid Response Ethiopia Food and Agricultural Organisation\",\n",
+        "    \"Central Emergency Response Fund Ensure protection of livelihoods and acceptable food consumption of vulnerable populations at risk of extreme food insecurity due to drought. VIII.1. Emergency Response Material relief assistance and services ODA Grants ENSURE PROTECTION OF LIVELIHOODS AND ACCEPTABLE FOOD CONSUMPTION OF VULNERABLE POPULATIONS AT RISK OF EXTREME FOOD INSECURITY DUE TO DROUGHT.\",\n",
         "    # PAF/AA\n",
-        "    \"VIII.3. Disaster Prevention & Preparedness Multi-hazard response preparedness Other Official Flows (non Export Credit) COSTA RICA CATASTROPHE DEFERRED DRAW DOWN OPTION (CAT DDO) International Bank for Reconstruction and Development IBRD Costa Rica Recipient Government\",\n",
+        "    \"International Bank for Reconstruction and Development VIII.3. Disaster Prevention & Preparedness Multi-hazard response preparedness Other Official Flows (non Export Credit) COSTA RICA CATASTROPHE DEFERRED DRAW DOWN OPTION (CAT DDO)\",\n",
         "    # PAF/AA\n",
-        "    \"Ending Drought Emergencies: Support to Pillar 5 (EDE/DRMC-SP5) VIII.3. Disaster Prevention & Preparedness Multi-hazard response preparedness ODA Grants ENDING DROUGHT EMERGENCIES: SUPPORT TO PILLAR 5 (EDE/DRMC-SP5) This grant will support one of the sixth pillars of the EDE CPF, namely the Drought Risk Management (Pillar 5), which is under the responsibility of the National Drought Management Authority (NDMA). Under the fifth pillar, the programme will support the component on early warning and early response to specifically strengthen the timeliness, accountability and efficiency of drought response, including through better preparedness. EU Institutions European Development Fund Kenya Recipient Government Recipient Government\",\n",
+        "    \"EU Institutions Ending Drought Emergencies: Support to Pillar 5 (EDE/DRMC-SP5) VIII.3. Disaster Prevention & Preparedness Multi-hazard response preparedness ODA Grants ENDING DROUGHT EMERGENCIES: SUPPORT TO PILLAR 5 (EDE/DRMC-SP5) This grant will support one of the sixth pillars of the EDE CPF, namely the Drought Risk Management (Pillar 5), which is under the responsibility of the National Drought Management Authority (NDMA). Under the fifth pillar, the programme will support the component on early warning and early response to specifically strengthen the timeliness, accountability and efficiency of drought response, including through better preparedness.\",\n",
+        "    # PAF/AA\n",
+        "    \"Inter-American Development Bank Contingent Loan for Natural Disaster Emergencies II.4. Banking & Financial Services Financial policy and administrative management Other Official Flows (non Export Credit) CONTINGENT LOAN FOR NATURAL DISASTER EMERGENCIES Contingent Loan for Natural Disaster Emergencies\",\n",
         "    # Unrelated\n",
-        "    \"Upgrading water supply facilities for communities in Lebanon affected by the consequences of the conflict in Syria I.4. Water Supply & Sanitation Basic drinking water supply and basic sanitation ODA Grants UPGRADING WATER SUPPLY FACILITIES FOR COMMUNITIES IN LEBANON AFFECTED BY THE CONSEQUENCES OF THE CONFLICT IN SYRIA In line with the Lebanon chapter of the Syria Regional Response Plan 2013, the project's objective is the following: To ensure that affected populations have access to adequate quantity of safe water and have means to store water safely. EU Institutions European Commission Lebanon United Nations Office of the United Nations High Commissioner for Refugees United Nations Office of the United Nations High Commissioner for Refugees\",\n",
+        "    \"Oak Foundation Research Foundation of the City University of New York VIII.1. Emergency Response Material relief assistance and services Private Development Finance RESEARCH FOUNDATION OF THE CITY UNIVERSITY OF NEW YORK Programme: Special Interest. Description: To help consolidate the presence and outreach of the Center for Immigrant, Refugee and Global Health (CIRGH) at City University of New York s School of Public Health (SPH). The central mission of the CIRGH is to advance scholarship, practice and understanding of the health and related challenges faced by immigrants and refugees at local, national and global levels.\",\n",
         "    # Unrelated\n",
-        "    \"Providing Free Bread, Supporting Livelihood and Preserving Livestock VIII.1. Emergency Response Emergency food assistance ODA Grants PROVIDING FREE BREAD, SUPPORTING LIVELIHOOD AND PRESERVING LIVESTOCK Providing free bread to Syrian families in the sieged regions and in northern Syria Saudi Arabia King Salman Humanitarian Aid and Relief Center Syrian Arab Republic International NGO  Human Rights and Freedoms and Humanitarian Relief\",\n",
+        "    \"United Kingdom Support to the International Committee of the Red Cross (ICRC) in the Sahel during 2022 VIII.1. Emergency Response Material relief assistance and services ODA Grants SUPPORT TO THE INTERNATIONAL COMMITTEE OF THE RED CROSS (ICRC) IN THE SAHEL DURING 2022 To provide life-saving assistance to crisis-affected and vulnerable people across five Sahelian countries, Mali, Niger, Chad, Mauritania and Burkina Faso. This support includes assistance for those suffering from food insecurity, therapeutic food and early detection of severe acute malnutrition, basic support to livelihoods through the provision of seeds and tools, animal food and animal vaccinations, improved access to safe water and hygiene, and emergency health and medicine.\",\n",
         "    # Unrelated\n",
-        "    \"Emergency food assistance VIII.1. Emergency Response Emergency food assistance ODA Grants EMERGENCY FOOD ASSISTANCE Projects Türkiye Miscellaneous Syrian Arab Republic Local Government Local Government\"\n",
+        "    \"United States Reconciliation Activity VIII.1. Emergency Response Material relief assistance and services ODA Grants RECONCILIATION ACTIVITY Reconciliation Activity\"\n",
         "]\n",
         "classifier(texts)"
       ]
