--- a/train_binary.ipynb
+++ b/train_binary.ipynb
@@ -92,7 +92,7 @@
         "    shuffle=True,\n",
         "    seed=42\n",
         ")\n",
-        "unique_labels = [\"Unrelated\", \"PAF/AA\"]\n",
+        "unique_labels = [\"PAF/AA\", \"Unrelated\"]\n",
         "id2label = {i: label for i, label in enumerate(unique_labels)}\n",
         "label2id = {id2label[i]: i for i in id2label.keys()}\n",
         "\n",
@@ -121,7 +121,7 @@
         "    learning_rate=1e-6, # This can be tweaked depending on how loss progresses\n",
         "    per_device_train_batch_size=16, # These should be tweaked to match GPU VRAM\n",
         "    per_device_eval_batch_size=16,\n",
-        "    num_train_epochs=10,\n",
+        "    num_train_epochs=15,\n",
         "    weight_decay=0.01,\n",
         "    evaluation_strategy='epoch',\n",
         "    save_strategy='epoch',\n",
