Try large multilabel

--- a/train_multiclass_meta.ipynb
+++ b/train_multiclass_meta.ipynb
@@ -88,11 +88,20 @@
         "\n",
         "dataset = dataset.train_test_split(\n",
         "    test_size=0.2,\n",
-        "    # stratify_by_column=\"label\",\n",
         "    shuffle=True,\n",
         "    seed=42\n",
         ")\n",
-        "unique_labels = [\"Unrelated\", \"AA\", \"PAF\"]\n",
+        "unique_labels = [\n",
+        "   \"Unrelated\",\n",
+        "   \"Crisis financing\",\n",
+        "   \"PAF\",\n",
+        "   \"AA\",\n",
+        "   \"Direct\",\n",
+        "   \"Indirect\",\n",
+        "   \"Part\",\n",
+        "   \"WB CAT DDO\",\n",
+        "   \"Contingent financing\"\n",
+        "]\n",
         "id2label = {i: label for i, label in enumerate(unique_labels)}\n",
         "label2id = {id2label[i]: i for i in id2label.keys()}\n",
         "\n",
@@ -101,7 +110,7 @@
         "data_collator = DataCollatorWithPadding(tokenizer=tokenizer)\n",
         "\n",
         "def preprocess_function(example):\n",
-        "   all_labels = example['label']\n",
+        "   all_labels = example['labels'].split(\",\")\n",
         "   labels = [0. for i in range(len(unique_labels))]\n",
         "   for label in all_labels:\n",
         "       label_id = label2id[label]\n",
@@ -131,7 +140,7 @@
         ")\n",
         "\n",
         "training_args = TrainingArguments(\n",
-        "    'cdp-paf-meta-classifier',\n",
+        "    'cdp-multi-classifier',\n",
         "    learning_rate=1e-6, # This can be tweaked depending on how loss progresses\n",
         "    per_device_train_batch_size=16, # These should be tweaked to match GPU VRAM\n",
         "    per_device_eval_batch_size=16,\n",
