--- a/train_multiclass_meta.ipynb
+++ b/train_multiclass_meta.ipynb
@@ -85,9 +85,11 @@
         "\n",
         "\n",
         "dataset = load_dataset(\"alex-miller/cdp-paf-meta\", split=\"train\")\n",
+        "dataset = dataset.add_column(\"class_labels\", dataset['labels'])\n",
         "\n",
-        "dataset = dataset.train_test_split(\n",
+        "dataset = dataset.class_encode_column('class_labels').train_test_split(\n",
         "    test_size=0.2,\n",
+        "    stratify_by_column=\"class_labels\",\n",
         "    shuffle=True,\n",
         "    seed=42\n",
         ")\n",
@@ -134,7 +136,7 @@
         "   return clf_metrics.compute(predictions=predictions, references=labels.astype(int).reshape(-1))\n",
         "\n",
         "\n",
-        "tokenized_data = dataset.map(preprocess_function, remove_columns=[\"label\"])\n",
+        "tokenized_data = dataset.map(preprocess_function)\n",
         "model = AutoModelForSequenceClassification.from_pretrained(\n",
         "    card, num_labels=len(id2label.keys()), id2label=id2label, label2id=label2id, problem_type=\"multi_label_classification\",\n",
         ")\n",
@@ -142,9 +144,9 @@
         "training_args = TrainingArguments(\n",
         "    'cdp-multi-classifier',\n",
         "    learning_rate=1e-6, # This can be tweaked depending on how loss progresses\n",
-        "    per_device_train_batch_size=16, # These should be tweaked to match GPU VRAM\n",
-        "    per_device_eval_batch_size=16,\n",
-        "    num_train_epochs=10,\n",
+        "    per_device_train_batch_size=24, # These should be tweaked to match GPU VRAM\n",
+        "    per_device_eval_batch_size=24,\n",
+        "    num_train_epochs=5,\n",
         "    weight_decay=0.01,\n",
         "    evaluation_strategy='epoch',\n",
         "    save_strategy='epoch',\n",
