--- a/train_binary_crisis.ipynb
+++ b/train_binary_crisis.ipynb
@@ -84,7 +84,13 @@
         "import numpy as np\n",
         "\n",
         "\n",
+        "def remap_binary(example):\n",
+        "    example['label'] = 'Unrelated' if example['labels'] == 'Unrelated' else 'Crisis finance'\n",
+        "    return example\n",
+        "\n",
+        "\n",
         "dataset = load_dataset(\"alex-miller/cdp-paf-meta\", split=\"train\")\n",
+        "dataset = dataset.map(remap_binary, remove_columns=['labels'], num_proc=8)\n",
         "\n",
         "dataset = dataset.class_encode_column('label').train_test_split(\n",
         "    test_size=0.2,\n",
@@ -92,7 +98,7 @@
         "    shuffle=True,\n",
         "    seed=42\n",
         ")\n",
-        "unique_labels = [\"PAF/AA\", \"Unrelated\"]\n",
+        "unique_labels = [\"Crisis finance\", \"Unrelated\"]\n",
         "id2label = {i: label for i, label in enumerate(unique_labels)}\n",
         "label2id = {id2label[i]: i for i in id2label.keys()}\n",
         "\n",
@@ -117,11 +123,11 @@
         ")\n",
         "\n",
         "training_args = TrainingArguments(\n",
-        "    'cdp-paf-meta-classifier',\n",
+        "    'cdp-crisis-finance-classifier',\n",
         "    learning_rate=1e-6, # This can be tweaked depending on how loss progresses\n",
-        "    per_device_train_batch_size=16, # These should be tweaked to match GPU VRAM\n",
-        "    per_device_eval_batch_size=16,\n",
-        "    num_train_epochs=15,\n",
+        "    per_device_train_batch_size=24, # These should be tweaked to match GPU VRAM\n",
+        "    per_device_eval_batch_size=24,\n",
+        "    num_train_epochs=10,\n",
         "    weight_decay=0.01,\n",
         "    evaluation_strategy='epoch',\n",
         "    save_strategy='epoch',\n",
