--- a/train_multiclass_meta.ipynb
+++ b/train_multiclass_meta.ipynb
@@ -72,7 +72,7 @@
       },
       "outputs": [],
       "source": [
-        "from datasets import load_dataset\n",
+        "from datasets import load_dataset, concatenate_datasets\n",
         "from transformers import (\n",
         "    AutoTokenizer,\n",
         "    DataCollatorWithPadding,\n",
@@ -85,6 +85,25 @@
         "\n",
         "\n",
         "dataset = load_dataset(\"alex-miller/cdp-paf-meta\", split=\"train\")\n",
+        "\n",
+        "# Remove unrelated and rebalance\n",
+        "dataset = dataset.filter(lambda example: example[\"labels\"] != \"Unrelated\")\n",
+        "\n",
+        "positive = dataset.filter(lambda example: example[\"labels\"] != \"Crisis financing\")\n",
+        "negative = dataset.filter(lambda example: example[\"labels\"] == \"Crisis financing\")\n",
+        "negative = negative.shuffle(seed=42)\n",
+        "negative = negative.select(range(positive.num_rows))\n",
+        "dataset = concatenate_datasets([positive, negative])\n",
+        "\n",
+        "def relabel_meta_to_multi(example):\n",
+        "    all_labels = example['labels'].split(',')\n",
+        "    if len(all_labels) > 1 and 'Crisis financing' in all_labels:\n",
+        "        all_labels.remove('Crisis financing')\n",
+        "    example['labels'] = ','.join(all_labels)\n",
+        "    return example\n",
+        "\n",
+        "dataset = dataset.map(relabel_meta_to_multi, num_proc=8)\n",
+        "\n",
         "dataset = dataset.add_column(\"class_labels\", dataset['labels'])\n",
         "\n",
         "dataset = dataset.class_encode_column('class_labels').train_test_split(\n",
@@ -94,7 +113,6 @@
         "    seed=42\n",
         ")\n",
         "unique_labels = [\n",
-        "   \"Unrelated\",\n",
         "   \"Crisis financing\",\n",
         "   \"PAF\",\n",
         "   \"AA\",\n",
@@ -146,7 +164,7 @@
         "    learning_rate=1e-6, # This can be tweaked depending on how loss progresses\n",
         "    per_device_train_batch_size=24, # These should be tweaked to match GPU VRAM\n",
         "    per_device_eval_batch_size=24,\n",
-        "    num_train_epochs=5,\n",
+        "    num_train_epochs=10,\n",
         "    weight_decay=0.01,\n",
         "    evaluation_strategy='epoch',\n",
         "    save_strategy='epoch',\n",
