--- a/inference.ipynb
+++ b/inference.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 16,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -59,6 +59,104 @@
       },
       "outputs": [
         {
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "6750b807e5d149e98a6fa09765e7cb4f",
+              "version_major": 2,
+              "version_minor": 0
+            },
+            "text/plain": [
+              "config.json:   0%|          | 0.00/1.04k [00:00<?, ?B/s]"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "69af1e099b974ab6b9668bde6ddec6e6",
+              "version_major": 2,
+              "version_minor": 0
+            },
+            "text/plain": [
+              "model.safetensors:   0%|          | 0.00/673M [00:00<?, ?B/s]"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "67556f5a23944b7992fef2d575cb4f7e",
+              "version_major": 2,
+              "version_minor": 0
+            },
+            "text/plain": [
+              "tokenizer_config.json:   0%|          | 0.00/188k [00:00<?, ?B/s]"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "723eb967939c421fbec7d82a100f3a7e",
+              "version_major": 2,
+              "version_minor": 0
+            },
+            "text/plain": [
+              "vocab.txt:   0%|          | 0.00/872k [00:00<?, ?B/s]"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "75bf3c1ea03248879d17569c79452d22",
+              "version_major": 2,
+              "version_minor": 0
+            },
+            "text/plain": [
+              "tokenizer.json:   0%|          | 0.00/2.76M [00:00<?, ?B/s]"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "59c27179c0d041df8dbbf07cef79e45f",
+              "version_major": 2,
+              "version_minor": 0
+            },
+            "text/plain": [
+              "added_tokens.json:   0%|          | 0.00/24.5k [00:00<?, ?B/s]"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "6376dfd588c24d3bbbb7d8a89f180151",
+              "version_major": 2,
+              "version_minor": 0
+            },
+            "text/plain": [
+              "special_tokens_map.json:   0%|          | 0.00/695 [00:00<?, ?B/s]"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
           "name": "stderr",
           "output_type": "stream",
           "text": [
@@ -70,95 +168,35 @@
           "output_type": "stream",
           "text": [
             "0\n",
-            "PAF: 84.3%\n",
-            "Direct: 53.59%\n",
-            "Indirect: 44.15%\n",
-            "Contingent financing: 23.79%\n",
-            "WB CAT DDO: 20.39%\n",
-            "AA: 14.02%\n",
-            "Crisis financing: 13.26%\n",
-            "Part: 10.02%\n",
+            "Crisis finance: 93.28%\n",
+            "Unrelated: 6.81%\n",
             "1\n",
-            "PAF: 74.06%\n",
-            "Indirect: 40.61%\n",
-            "Direct: 31.7%\n",
-            "Crisis financing: 21.22%\n",
-            "AA: 11.95%\n",
-            "Contingent financing: 9.86%\n",
-            "Part: 8.83%\n",
-            "WB CAT DDO: 7.43%\n",
+            "Unrelated: 97.55%\n",
+            "Crisis finance: 4.68%\n",
             "2\n",
-            "PAF: 86.57%\n",
-            "Indirect: 74.06%\n",
-            "Direct: 30.13%\n",
-            "AA: 18.98%\n",
-            "Part: 13.84%\n",
-            "Contingent financing: 13.61%\n",
-            "Crisis financing: 13.25%\n",
-            "WB CAT DDO: 11.01%\n",
+            "Crisis finance: 92.33%\n",
+            "Unrelated: 6.74%\n",
             "3\n",
-            "PAF: 76.66%\n",
-            "Indirect: 52.53%\n",
-            "Crisis financing: 23.06%\n",
-            "Direct: 20.07%\n",
-            "AA: 16.09%\n",
-            "Part: 15.08%\n",
-            "Contingent financing: 8.72%\n",
-            "WB CAT DDO: 6.3%\n",
+            "Crisis finance: 80.87%\n",
+            "Unrelated: 24.35%\n",
             "4\n",
-            "PAF: 63.47%\n",
-            "Indirect: 33.28%\n",
-            "Crisis financing: 31.71%\n",
-            "Direct: 26.27%\n",
-            "AA: 15.2%\n",
-            "Part: 8.18%\n",
-            "Contingent financing: 7.19%\n",
-            "WB CAT DDO: 5.44%\n",
+            "Crisis finance: 96.0%\n",
+            "Unrelated: 3.14%\n",
             "5\n",
-            "Crisis financing: 59.23%\n",
-            "PAF: 40.12%\n",
-            "Indirect: 19.81%\n",
-            "Direct: 15.99%\n",
-            "AA: 14.48%\n",
-            "Part: 8.15%\n",
-            "Contingent financing: 6.06%\n",
-            "WB CAT DDO: 5.32%\n",
+            "Crisis finance: 95.71%\n",
+            "Unrelated: 3.62%\n",
             "6\n",
-            "PAF: 79.84%\n",
-            "Indirect: 54.71%\n",
-            "Direct: 28.28%\n",
-            "Crisis financing: 18.76%\n",
-            "AA: 16.18%\n",
-            "Contingent financing: 12.24%\n",
-            "Part: 11.35%\n",
-            "WB CAT DDO: 9.84%\n",
+            "Crisis finance: 93.18%\n",
+            "Unrelated: 5.88%\n",
             "7\n",
-            "PAF: 64.18%\n",
-            "Crisis financing: 37.31%\n",
-            "Indirect: 32.07%\n",
-            "Direct: 21.16%\n",
-            "AA: 16.0%\n",
-            "Part: 10.95%\n",
-            "Contingent financing: 7.14%\n",
-            "WB CAT DDO: 5.3%\n",
+            "Crisis finance: 94.62%\n",
+            "Unrelated: 4.81%\n",
             "8\n",
-            "PAF: 77.1%\n",
-            "Direct: 61.02%\n",
-            "Contingent financing: 55.96%\n",
-            "WB CAT DDO: 51.44%\n",
-            "Indirect: 34.54%\n",
-            "AA: 19.15%\n",
-            "Crisis financing: 17.74%\n",
-            "Part: 17.15%\n",
+            "Crisis finance: 93.31%\n",
+            "Unrelated: 6.29%\n",
             "9\n",
-            "PAF: 82.83%\n",
-            "Direct: 56.7%\n",
-            "Indirect: 38.31%\n",
-            "Contingent financing: 35.11%\n",
-            "WB CAT DDO: 27.38%\n",
-            "Crisis financing: 14.06%\n",
-            "AA: 13.65%\n",
-            "Part: 11.68%\n"
+            "Crisis finance: 92.79%\n",
+            "Unrelated: 6.93%\n"
           ]
         }
       ],
@@ -191,7 +229,7 @@
         "        )\n",
         "\n",
         "\n",
-        "card = \"alex-miller/cdp-multi-classifier\"\n",
+        "card = \"alex-miller/cdp-crisis-finance-classifier\"\n",
         "model = AutoModelForSequenceClassification.from_pretrained(card)\n",
         "tokenizer = AutoTokenizer.from_pretrained(card, model_max_length=512)\n",
         "\n",
