Join negative examples

--- a/train_multiclass_meta_synth.ipynb
+++ b/train_multiclass_meta_synth.ipynb
@@ -94,9 +94,26 @@
         "\n",
         "\n",
         "dataset = load_dataset(\"alex-miller/cdp-paf-meta-synthetic\")\n",
-        "\n",
         "# Remove very short records\n",
         "dataset = dataset.filter(lambda example: len(example[\"text\"]) > 5)\n",
+        "\n",
+        "# Load negative examples (just crisis financing)\n",
+        "negative = load_dataset(\"alex-miller/cdp-paf-meta\", split=\"train\")\n",
+        "negative = negative.filter(lambda example: example[\"labels\"] == \"Crisis financing\")\n",
+        "negative = negative.shuffle(seed=42)\n",
+        "pos_train_num_rows = dataset['train'].num_rows\n",
+        "pos_test_num_rows = dataset['test'].num_rows\n",
+        "total_num_rows = pos_train_num_rows + pos_test_num_rows\n",
+        "negative = negative.select(range(total_num_rows))\n",
+        "\n",
+        "test_size = pos_test_num_rows / total_num_rows\n",
+        "negative = negative.train_test_split(\n",
+        "   test_size=test_size,\n",
+        "   shuffle=True,\n",
+        "   seed=42\n",
+        ")\n",
+        "dataset['train'] = concatenate_datasets([dataset['train'], negative['train']])\n",
+        "dataset['test'] = concatenate_datasets([dataset['test'], negative['test']])\n",
         "\n",
         "unique_labels = [\n",
         "   \"Crisis financing\",\n",
@@ -148,8 +165,8 @@
         "training_args = TrainingArguments(\n",
         "    'cdp-multi-classifier-synthetic',\n",
         "    learning_rate=1e-6, # This can be tweaked depending on how loss progresses\n",
-        "    per_device_train_batch_size=24, # These should be tweaked to match GPU VRAM\n",
-        "    per_device_eval_batch_size=24,\n",
+        "    per_device_train_batch_size=16, # These should be tweaked to match GPU VRAM\n",
+        "    per_device_eval_batch_size=16,\n",
         "    num_train_epochs=10,\n",
         "    weight_decay=0.01,\n",
         "    evaluation_strategy='epoch',\n",
