Binary on llamda

--- a/inference.ipynb
+++ b/inference.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 13,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -70,33 +70,35 @@
           "output_type": "stream",
           "text": [
             "0\n",
-            "PAF: 84.3%\n",
-            "Direct: 53.59%\n",
+            "PAF: 98.91%\n",
+            "Crisis finance: 1.09%\n",
             "1\n",
-            "PAF: 74.06%\n",
+            "PAF: 98.26%\n",
+            "Crisis finance: 1.74%\n",
             "2\n",
-            "PAF: 86.57%\n",
-            "Indirect: 74.06%\n",
+            "PAF: 99.19%\n",
+            "Crisis finance: 0.81%\n",
             "3\n",
-            "PAF: 76.66%\n",
-            "Indirect: 52.53%\n",
+            "PAF: 91.54%\n",
+            "Crisis finance: 8.46%\n",
             "4\n",
-            "PAF: 63.47%\n",
+            "PAF: 98.22%\n",
+            "Crisis finance: 1.78%\n",
             "5\n",
-            "Crisis financing: 59.23%\n",
+            "Crisis finance: 91.51%\n",
+            "PAF: 8.49%\n",
             "6\n",
-            "PAF: 79.84%\n",
-            "Indirect: 54.71%\n",
+            "PAF: 96.28%\n",
+            "Crisis finance: 3.72%\n",
             "7\n",
-            "PAF: 64.18%\n",
+            "PAF: 93.09%\n",
+            "Crisis finance: 6.91%\n",
             "8\n",
-            "PAF: 77.1%\n",
-            "Direct: 61.02%\n",
-            "Contingent financing: 55.96%\n",
-            "WB CAT DDO: 51.44%\n",
+            "PAF: 96.73%\n",
+            "Crisis finance: 3.27%\n",
             "9\n",
-            "PAF: 82.83%\n",
-            "Direct: 56.7%\n"
+            "PAF: 98.45%\n",
+            "Crisis finance: 1.55%\n"
           ]
         }
       ],
@@ -104,33 +106,36 @@
         "from transformers import AutoModelForSequenceClassification, AutoTokenizer\n",
         "import torch\n",
         "import numpy as np\n",
+        "from scipy.special import softmax\n",
         "\n",
         "\n",
         "def sigmoid(z):\n",
         "    return 1/(1 + np.exp(-z))\n",
         "\n",
         "\n",
-        "def inference(tokenizer, model, text):\n",
+        "def inference(tokenizer, model, text, multi=False):\n",
         "    inputs = tokenizer(text, return_tensors=\"pt\", truncation=True)\n",
         "\n",
         "    with torch.no_grad():\n",
         "        predictions = model(**inputs)\n",
         "    \n",
         "    logits = predictions.logits.numpy()[0]\n",
-        "    predicted_confidences = sigmoid(logits)\n",
+        "    if multi:\n",
+        "        predicted_confidences = sigmoid(logits)\n",
+        "    else:\n",
+        "        predicted_confidences = softmax(logits, axis=0)\n",
         "    sort_index = np.argsort(predicted_confidences)\n",
         "    for class_id in reversed(sort_index):\n",
         "        class_name = model.config.id2label[class_id]\n",
         "        class_confidence = predicted_confidences[class_id]\n",
-        "        if class_confidence > 0.5:\n",
-        "            print(\"{}: {}%\".format(\n",
-        "                class_name,\n",
-        "                round(class_confidence * 100, 2)\n",
-        "                )\n",
+        "        print(\"{}: {}%\".format(\n",
+        "            class_name,\n",
+        "            round(class_confidence * 100, 2)\n",
         "            )\n",
+        "        )\n",
         "\n",
         "\n",
-        "card = \"alex-miller/cdp-multi-classifier\"\n",
+        "card = \"alex-miller/cdp-paf-classifier\"\n",
         "model = AutoModelForSequenceClassification.from_pretrained(card)\n",
         "tokenizer = AutoTokenizer.from_pretrained(card, model_max_length=512)\n",
         "\n",
